see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-May-2010 Christophe Demko
 ^ Add an xml attribute to editor field: 'hide' to specify which buttons to hide

03-May-2010 Andrew Eddie
 ^ Merge fixes to media fields (Elin Waring)
 + Merge addition of featured contacts view (Elin Waring)
 + Merge extra fields for user profile plugin (Elin Waring)
 ^ Merge various fixes to HTML filtering of and buttons of rich textareas (Elin Waring)
 ^ Merge changes/fixes to sample data: fruit shop style fix; articles category module (Elin Waring)

2-May-2010 Christophe Demko
# Correcting a bug I have introduced on commit #16536

2-May-2010 Jean-Marie Simonet
$ Consolidating some categories, contact, newsfeeds, weblinks,content strings
$ Refactoring com_contacts frontend ini/keys
$ Added calendar image in front-end (Thanks Bill)
$ Moving icons for com_contact to new folder in media/contacts/images/
$ Correcting/consolidating strings
^ Adding fax in contact edit
# Correcting mod_banners [20301](thanks Phil Snell)

01-May-2010 Hannes Papenberg
# Fixing base-tag for SEF mode without mod_rewrite

1-May-2010 Jean-Marie Simonet
$ Refactoring com_contents back-end ini/keys
$ Refactoring com_contents front-end ini/keys (WIP)
$ Completing what can be done refactoring com_contents front-end ini/keys

30-Apr-2010 Christophe Demko & Jean-Marie Simonet
# Fixed problems in com_banners

30-Apr-2010 Andrew Eddie
 # Fixed [#20230] Filter in session impacts modals elsewhere.
 # Fixed [#20283] State Filter field in newsfeeds admin view is misbehaving.
 # Fixed [#17020] Refactoring com_login component: error on at the end of inactivity period.

30-Apr-2010 Jean-Marie Simonet