@@ -15,17 +15,15 @@ COM_MESSAGES_HEADING_READ="Read"
 COM_MESSAGES_HEADING_SUBJECT="Subject"
 COM_MESSAGES_MANAGER_MESSAGES="Private Messages Manager: Messages"
 COM_MESSAGES_MY_SETTINGS="My Settings"
-COM_MESSAGES_OPTION_PUBLISH="Mark as Read"
 COM_MESSAGES_OPTION_READ="Read"
-COM_MESSAGES_OPTION_UNPUBLISH="Mark as Unread"
 COM_MESSAGES_OPTION_UNREAD="Unread"
 COM_MESSAGES_READ_PRIVATE_MESSAGE="Read Private Message"
 COM_MESSAGES_SEARCH_IN_SUBJECT="Search in message subject or description "
 COM_MESSAGES_TOOLBAR_MY_SETTINGS="My Settings"
-COM_MESSAGES_TOOLBAR_PUBLISH="Mark As Read"
+COM_MESSAGES_MARK_AS_READ="Mark As Read"
 COM_MESSAGES_TOOLBAR_REPLY="Reply"
 COM_MESSAGES_TOOLBAR_SEND="Send"
-COM_MESSAGES_TOOLBAR_UNPUBLISH="Mark as Unread"
+COM_MESSAGES_MARK_AS_UNREAD="Mark as Unread"
 COM_MESSAGES_VIEW_PRIVATE_MESSAGE="Private Messages Manager: View Message"
 COM_MESSAGES_WRITE_PRIVATE_MESSAGE="Write Private Message"
 
